# neves-lcmc2lm

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/mcc2lm/: constants.hpp  exceptions.hpp  logger.hpp  logogram.hpp  ngram.hpp  radical.hpp  sentence.hpp  sentence_value_impl.inc  sql.hpp  sql_core.inc  sql_query_ops.inc  word.hpp  word_iterator_impl.inc  word_save_impl.inc  word_word_impl.inc
include/mcc2lm/impl/: logogram_impl.inc  logogram_iterator_impl.inc  logogram_value_impl.inc  ngram_impl.inc  sentence_impl_part1.inc  sentence_impl_part2.inc  sentence_iterator_impl.inc  sentence_value_impl.inc  sql_impl_part1.inc  sql_impl_part2.inc  sql_transaction.inc  word_impl_part1.inc  word_impl_part2.inc  word_save_impl.inc  word_word_impl.inc
scripts/: download_lcmc.sh  verify.sh
src/: main.cpp  process.cpp  radical.cpp  radical_api.cpp  radical_helpers.hpp  radical_load.cpp  radical_load_fallback.cpp  radical_load_radicals.cpp  radical_parse.cpp  radical_utf8.cpp  schema.cpp
